<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App stuff as a whole or outdated stuff-->
    <string name="app_name">Morning Sign Out</string>
    <string name="banner_ad_unit_id">ca-app-pub-5416353734203696/5885880964</string>

    <!--Menu, actionbar, or bottom bar of articles-->
    <string name="action_style">Style!</string>
    <string name="action_search">Search</string>
    <string name="action_scroll">Scroll to top or to previous position</string>
    <string name="action_comment">Comment</string>
    <string name="action_share">Share article</string>
    <string name="action_swap">Put the toolbar on the left or right</string>
    <string name="action_login">Log in </string>
    <string name="action_logout">Log out</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_blank">Blank</string>

    <string name="disqus_login">Log In - Disqus</string>
    <string name="disqus_reply">Reply</string>
    <string name="disqus_seeUser">See User</string>
    <string name="disqus_delete">Delete</string>
    <string name="disqus_post">Post</string>
    <string name="disqus_dialog1">Comment </string>
    <string name="disqus_dialog2">Reply to </string>
    <string name="comment_hint">Type comment here.</string>
    <string name="comment_label">Post</string>
    <string name="title_commentXDescription">close comments</string>

    <string name="title_contentDescription">app home button</string>
    <string name="border_contentDescription">blue horizontal border</string>
    <string name="logo_contentDescription">Morning Sign Out logo</string>
    <string name="splash_contentDescription">Splash screen with Morning Sign Out Logo</string>
    <string name="row_contentDescription">Image from an article</string>
    <string name="title_slide_menu">Categories menu</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="article_image">Article Image</string>
    <string name="category_icon">Category icon</string>

    <string name="search_hint">Search Morning Sign Out</string>
    <string name="search_author">by %1$s</string>

    <string name="meet_the_team">Meet the Team</string>
    <string name="mso_staff">MSO Staff</string>
    <string name="mtt_row_content_description">Morning Sign Out Staff Department</string>
    <string name="mtt_search_hint">Search for a person</string>

    <string name="category_refresh">If articles do not load, drag down to refresh</string>
    <string name="button_mttPrev">Prev</string>
    <string name="button_mttNext">Next</string>

    <string name="error_fail_to_connect">We had trouble trying to connect</string>
    <string name="error">Something went wrong. Please report this bug to the developers in the play
        store comment section.</string>
    <string name="error_no_internet_1">We cannot connect to</string>
    <string name="error_no_internet_2">right now. Please check your internet connection!</string>
    <string name="error_refresh_button">Refresh</string>

    <string-array name="descriptions">
        <item>description 1</item>
        <item>description 2</item>
        <item>description 3</item>
        <item>description 4</item>
    </string-array>

    <string-array name="categories">
        <item>Latest</item> <!--No latest page on MSO now-->
        <!--<item>Featured</item>-->
        <item>Research</item>
        <item>Wellness</item>
        <item>Medicine</item>
        <item>Public Health</item>
        <item>Healthcare</item>
        <item>About MSO</item>
        <item>Meet the Team</item>
    </string-array>

    <array name="categories_icons">
        <item>@drawable/category_latest</item>
        <!--<item>@drawable/category_featured</item>-->
        <item>@drawable/category_research</item>
        <item>@drawable/category_wellness</item>
        <item>@drawable/category_medicine</item>
        <item>@drawable/category_public_health</item>
        <item>@drawable/category_healthcare</item>
        <item>@drawable/category_about</item>
        <item>@drawable/category_meettheteam</item>
    </array>

    <string-array name="categories_for_url">
        <item>latest</item>
        <!--<item>featured</item>-->
        <item>research</item>
        <item>wellness</item>
        <item>medicine</item>
        <item>public-health</item>
        <item>healthcare</item>
    </string-array>

    <string-array name="disqus_options">
        <item>Reply</item>
        <item>See User</item>
        <item>Delete</item>
    </string-array>

    <string name="description_error_no_internet">Cannot connect to internet</string>

    <string name="about_us">About Us</string>
    <string name="why_mso">Why "Morning Sign Out"?</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_content">
        <![CDATA[
        <b>Sign Out</b> – the process in healthcare where patients are handed over to the
        next person/team taking care of them. The term is inclusive to all healthcare professionals,
        not only to physicians; nurses, pharmacists, case-workers, social workers, and several others
        all practice the art of “signing out” to each other.<p>It’s a critical process. One must
        accurately summarize who/what/why the patient is here, keeping the sign out simple enough
        so that the next person isn’t flooded with irrelevant information, but thorough enough so
        the whole story can be well understood, and so good decisions can be made.</p>
          ]]>
    </string>
    <string name="morning">Morning</string>
    <string name="morning_content">
         <![CDATA[
        <b>Morning</b> sign outs are particularly interesting. All of the categoryActivity, labs,
        studies, and data that had occurred in the last 24 hours are assessed, and the plan for a
        new day is formulated. Most major medical decisions happen during the day, so the morning
        sign out is often the launching point for the rest of the day’s events.<p>As a society, there
        is a large divide between the world of medicine and science and that of the greater public.
        Often, the relationship between the two is strained and distrustful. This endeavor aims to
        bridge that divide.</p>
        ]]>
        </string>
    <string name="footer_content">As with a sign out, we hope to turn science and medicine into
        something understandable for our readers, with enough critical information that leaves them
        more knowledgeable than before.</string>

    <!-- Meet the team header view for the list view -->
    <!--<string name="meet_the_team_header_intro">-->
        <!--<p><center><i>Meet our <b>Writing Team!</b></i></center></p>-->
    <!--</string>-->
    <!--<string name="meet_the_team_header_body1">-->
        <!--<p><b>We have an amazing team of writers composed almost entirely of students from the University-->
        <!--of California system. These students work hard to gather research, write informative-->
        <!--articles, and boil it down into the simple-to-read format that you can expect from Morning-->
        <!--Sign Out, the biomedical magazine that anyone can read!</b></p>-->
        <!--<p></p><p></p>-->
    <!--</string>-->
    <!--<string name="meet_the_team_header_body2">-->
        <!--<p><b>To quickly find a particular author, place your finger along the rightmost edge of the-->
        <!--screen and scroll from there. Authors are arranged by first name.</b></p>-->
    <!--</string>-->

    <string name="meet_the_team_header_intro">Meet our Writing Team!</string>
    <string name="meet_the_team_header_body1">
        We have an amazing team of writers composed almost entirely of students from the University
        of California system. These students work hard to gather research, write informative
        articles, and boil it down into the simple-to-read format that you can expect from Morning
        Sign Out, the biomedical magazine that anyone can read!
    </string>
    <string name="meet_the_team_header_body2">
        To quickly find a particular author, place your finger along the rightmost edge of the
        screen and scroll from there. Authors are arranged by first name.
    </string>
</resources>
