<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:background="#FFFFFF"
    android:id="@+id/scrollView">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="116dp"
        android:id="@+id/imageView"
        android:src="@drawable/mso_logo"
        android:contentDescription="msoLogo"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:typeface="serif"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:id="@+id/imageView2"
        android:src="@drawable/mso_border"
        android:contentDescription="msoBorder"
        android:layout_marginTop="-15dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:text="@string/why_mso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:typeface="serif"
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"/>

    <TextView
        android:text="@string/sign_out_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:typeface="serif"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:text="@string/morning_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:typeface="serif"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />

    <TextView
        android:text="@string/footer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:typeface="serif"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000" />



</LinearLayout>
</ScrollView>
