<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="@dimen/abc_action_button_min_height_material"
    style="?android:attr/buttonBarStyle">

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/disqus_reply"
        android:id="@+id/button_reply"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button_disqus"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/disqus_seeUser"
        android:id="@+id/button_seeUser"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button_disqus"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />

    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/disqus_delete"
        android:id="@+id/button_delete"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button_disqus"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="@android:color/black"
        android:textAllCaps="false" />
</LinearLayout>